[package]
name = "quinn_leak"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"

[[bin]]
name = "client"

[dependencies]
anyhow = "1.0.79"
bytes = "1.5.0"
quinn = "0.10.2"
rcgen = "0.12.1"
rustls = { version = "0.21.10", features = ["dangerous_configuration"] }
tokio = { version = "1.36.0", features = ["full"] }
